
uwbdir = $(prefix)/bin/uwb

nobase_dist_uwb_SCRIPTS = __init__.py

dist_bin_SCRIPTS =  \
  uwb_archiver.py \
  uwb_baseband.py \
  uwb_cleaner.py \
  uwb_config.py \
  uwb_continuum.py \
  uwb_fold.py \
  uwb_preprocessor.py \
  uwb_proc.py \
  uwb_recv.py \
  uwb_recvsim.py \
  uwb_repack_continuum.py \
  uwb_repack_fold.py \
  uwb_repack_fold_server.py \
  uwb_repack_preprocessor.py \
  uwb_repack_search.py \
  uwb_search.py \
  uwb_stat.py \
  uwb_tcs.py \
  uwb_tcs_interface.py
